Removed hard coded variables from trigger build